fix spacing centerdiv

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,7 +48,7 @@ a:visited {
 }
 
 .centerdiv{
-    padding: 1rem;
+    padding: 28px;
 }
 
 .navbar  {
